login/src/main/java/com/example/login/global/error/exception/ErrorCode.java
package com.example.login.global.error.exception;

import lombok.*;

@Getter
@AllArgsConstructor
public enum ErrorCode {

    INVALID_TOKEN(401, "Invalid Token"),
    EXPIRED_TOKEN(401, "Expired Token"),

    USER_NOT_FOUND(404, "User Not Found"),
    USER_ALREADY_EXISTS(409, "User Already Exists");


    private final int status;

    private final String message;

}
